feat: add images and reviews functionality

--- a/front/src/app/components/dashboard/containers/dashboard-container.html
+++ b/front/src/app/components/dashboard/containers/dashboard-container.html
@@ -3,4 +3,7 @@
     [total]="total$ | async"
     [loading]="loading$ | async"
     [error]="error$ | async"
+    (openAddBeerDialogEvent)="openAddBeerDialog()"
+    (addReviewEvent)="openAddReviewDialog($event)"
+    (addImageEvent)="openAddImageDialog($event)"
 />
