--- a/front/src/app/components/add-beer-modal/presenters/add-beer-modal-presenter.html
+++ b/front/src/app/components/add-beer-modal/presenters/add-beer-modal-presenter.html
@@ -1,22 +1,6 @@
-<div class="add-bear-modal-wrapper">
-  <h2 mat-dialog-title>Add Root Beer</h2>
+<div class="add-beer-wrapper">
+  <h2>Add Root Beer</h2>
 
-  <div class="content-wrapper">
-    <ng-container [ngTemplateOutlet]="dialogContent" />
-  </div>
-
-  <div class="actions-cta-wrapper">
-    <ng-container [ngTemplateOutlet]="actionsCtaContent" />
-  </div>
-
-</div>
-
-
-
-<!--Ne templates-->
-
-<ng-template #dialogContent>
-  <mat-dialog-content>
   <form [formGroup]="addBeerForm">
     <mat-form-field appearance="outline">
       <mat-label>Name</mat-label>
@@ -33,14 +17,11 @@
       ></textarea>
     </mat-form-field>
   </form>
-</mat-dialog-content>
-</ng-template>
 
-<ng-template #actionsCtaContent>
-    <mat-dialog-actions >
+  <div class="actions">
     <button mat-button (click)="onCancel()">Cancel</button>
     <button mat-flat-button color="primary" (click)="onSubmit()" [disabled]="addBeerForm.invalid">
       Add
     </button>
-  </mat-dialog-actions>
-</ng-template>
+  </div>
+</div>
