--- a/front/src/app/components/add-beer-modal/presenters/add-beer-modal-presenter.scss
+++ b/front/src/app/components/add-beer-modal/presenters/add-beer-modal-presenter.scss
@@ -1,4 +1,8 @@
-form {
+.add-beer-wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+
+  form {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -8,4 +12,6 @@ form {
     width: 100%;
   }
 }
+}
+
 
