--- a/front/src/app/components/dashboard/presenters/dashboard-presenter.scss
+++ b/front/src/app/components/dashboard/presenters/dashboard-presenter.scss
@@ -3,6 +3,12 @@
   margin: auto;
   padding: 25px;
   background-color: #f9f9f9;
+
+  .button-wrappers {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+  }
 }
 
 .loading {
@@ -21,8 +27,4 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-}
-
-.add-bear-btn {
-  margin-top: 10px;
 }
