feat: added detail page

--- a/front/src/app/components/dashboard/containers/dashboard-container.html
+++ b/front/src/app/components/dashboard/containers/dashboard-container.html
@@ -7,5 +7,6 @@
     (openAddBeerDialogEvent)="openAddBeerPage()"
     (addReviewEvent)="openAddReviewDialog($event)"
     (addImageEvent)="openAddImageDialog($event)"
+    (viewDetailEvent)="navigateToDetail($event)"
     (fetchMoreResultsEvent)="fetchMoreResults()"
 />
