feat: added carousel page with details

--- a/front/src/app/components/carousel/presenters/carousel-presenter.html
+++ b/front/src/app/components/carousel/presenters/carousel-presenter.html
@@ -3,7 +3,7 @@
     <div class="carousel-viewport">
       <img [src]="currentImage().src" [alt]="currentImage().alt" />
     </div>
-
+    <div class="divider"></div>
     @if (images().length > 1) {
       <div class="carousel-controls">
         <button mat-icon-button (click)="prev()" [disabled]="!hasPrev()">
