feat: added review list comp

--- a/front/src/app/components/drink-detail/presenters/drink-detail-presenter.html
+++ b/front/src/app/components/drink-detail/presenters/drink-detail-presenter.html
@@ -24,6 +24,10 @@
         <div class="divider"></div>
         <p class="description">{{ d.description }}</p>
       </div>
+
+      <div class="reviews-section">
+        <app-review-list [drinkId]="d.id" />
+      </div>
     </div>
   </div>
 }
