--- a/front/src/app/components/drink-detail/presenters/drink-detail-presenter.scss
+++ b/front/src/app/components/drink-detail/presenters/drink-detail-presenter.scss
@@ -66,4 +66,11 @@
     color: rgba(0, 0, 0, 0.65);
     margin: 0;
   }
+
+  .reviews-section {
+    padding: 0 32px 28px;
+    border-top: 1px solid rgba(0, 0, 0, 0.06);
+    margin-top: 4px;
+    padding-top: 24px;
+  }
 }
