--- a/front/src/app/components/review-list/presenters/review-list-presenter.scss
+++ b/front/src/app/components/review-list/presenters/review-list-presenter.scss
@@ -69,4 +69,9 @@
     font-size: 12px;
     color: rgba(0, 0, 0, 0.35);
   }
+
+  .show-more-wrapper {
+    padding-top: 12px;
+    text-align: center;
+  }
 }
