--- a/front/src/app/components/drink-detail/presenters/drink-detail-presenter.html
+++ b/front/src/app/components/drink-detail/presenters/drink-detail-presenter.html
@@ -27,8 +27,11 @@
       </div>
     </div>
 
-    <div class="reviews-section">
-      <app-review-list [drinkId]="drinkValue.id" />
-    </div>
+    @if(drinkValue) {
+      <div class="reviews-section">
+        <app-review-list [drinkId]="drinkValue.id" />
+      </div>
+    }
+
   </div>
 }
