--- a/front/src/app/components/dashboard/presenters/dashboard-presenter.scss
+++ b/front/src/app/components/dashboard/presenters/dashboard-presenter.scss
@@ -1,3 +1,4 @@
+@use '../../../mixins.scss' as *;
 .dashboard-container {
   max-width: 1200px;
   margin: auto;
@@ -18,9 +19,7 @@
 }
 
 .error {
-  text-align: center;
-  color: var(--mat-sys-error);
-  padding: 24px;
+  @include error; 
 }
 
 .card-container {
