feat: imprving store architetcure

--- a/front/src/app/components/drink-detail/containers/drink-detail-container.html
+++ b/front/src/app/components/drink-detail/containers/drink-detail-container.html
@@ -1,5 +1,6 @@
 <app-drink-detail-presenter
   [drink]="drink$ | async"
   [loading]="(loading$ | async) ?? true"
+  [error]="error$ | async"
   (goBack)="goBack()"
 />
